--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/three": "^0.178.1",
     "sass": "^1.89.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "three": "^0.178.0"
   }
 }
