--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 22.16.0
+          node-version: '24.0.2'
           cache: 'npm'
       - name: Install dependencies
         run: npm install
